--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -18,11 +18,13 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg px-3">
+        <nav class="navbar navbar-expand-lg px-3 fixed-top">
             <a class="navbar-brand" asp-controller="User" asp-action="Index">Il tuo Museo</a>
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -36,8 +38,11 @@
                     </li>
                     <partial name="_LoginPartial" />
                 </ul>
+
+
             </div>
             @RenderSection("SearchBar", required: false)
+
         </nav>
     </header>
 
