--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -18,8 +18,10 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg px-3 fixed-top">
-            <a class="navbar-brand" asp-controller="User" asp-action="Index">Il tuo Museo</a>
+        <nav class="navbar navbar-expand-lg px-3">
+            <a class="navbar-brand" asp-controller="User" asp-action="Index">
+                
+            </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
