--- a/ShopMuseoProgettoFinale/Views/Admin/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Admin/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "_Layout";
 }
+
 <div class="container-fluid my-3">
     <div class="row d-flex justify-content-center gy-3">
         <div class="col-12 d-flex justify-content-center">
@@ -12,35 +13,14 @@
                 </span>
             </a>
         </div>
-
         <div class="col-12 col-md-10">
             <div class="row g-4">
-                <h1>I prodotti esauriti in magazzino</h1>
-                @foreach (Product product in Model)
-                {
-                    if (product.Quantity == 0)
-                    {
-                        <div class="col-md-4 col-lg-3 col-12 d-flex align-items-stretch">
-                            @await Html.PartialAsync("_AdminProductCard", product)
-                        </div>
-                    }
+                @foreach (Product product in Model) {
+                    <div class="col-md-4 col-lg-3 col-12 d-flex align-items-stretch">
+                        @await Html.PartialAsync("_AdminProductCard", product)
+                    </div>
                 }
-
-                <h1>I prodotti presenti in magazzino</h1>
-                @foreach (Product product in Model)
-                {
-                    if (product.Quantity > 0)
-                    {
-                        <div class="col-md-4 col-lg-3 col-12 d-flex align-items-stretch">
-                            @await Html.PartialAsync("_AdminProductCard", product)
-                        </div>
-                    }
-                }
-
-
             </div>
         </div>
-
     </div>
 </div>
-
