aggiunto Bouncing Text

--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -51,6 +51,7 @@
 
 
 
+
 <div class="slide-pictures-container">
 
     <div class="slideBoots">
@@ -92,6 +93,10 @@
 
 @*------------------------Finito Slides--------------------------------------
 *@
+
+<div class="productsDiv" style="text-align:Center">
+    <h2><span>O</span><span>u</span><span>r</span><span> &nbsp</span><span>P</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span><span> </span><span> </span></h2>
+</div>
 
 <div class="container-fluid">
     <div id="spinner-loader" class="d-flex justify-content-center">
