modifica contenuto footer

--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -50,14 +50,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <h3>About the Museum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, lectus eu bibendum auctor, ante dui varius metus, ut dictum libero libero euismod mi.</p>
+                        <h3>Chi Siamo</h3>
+                        <p>Siamo un museo che preserva e celebra la cultura e l'arte attraverso mostre uniche e programmi educativi. La nostra visione è rendere la cultura accessibile a tutti.</p>
                     </div>
                     <div class="col-md-4">
-                        <h3>Contact Us</h3>
+                        <h3>Contattaci</h3>
                         <ul>
-                            <li>Address: 123 Main Street, Anytown USA</li>
-                            <li>Phone: (123) 456-7890</li>
+                            <li>Indirizzo: 123 Main Street , IT 50122</li>
+                            <li>Telefono: (123) 456-7890</li>
                             <li>Email: info@museum.com</li>
                         </ul>
                     </div>
