--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -20,33 +20,37 @@
 
 <div class="header-main-bar">
     <div class="logo-search-container">
-       
-
         @*musem*@
-
-    <div class="Title">
-        <span>MuseumShop</span>
+        <div class="Title">
+            <span>MuseumShop</span>
+        </div>
     </div>
-
-
-
-    </div>
-    @*-----------------------------------*@
 </div>
 
 @*-------------------------Finito Header----------------------------*@
 @*<h1 id="Entro">
     <span>Here</span>
+
     <span>you</span>
+
     <span>can</span>
+
     <span>bring</span>
+
     <span>your</span>
+
     <span>memories</span>
+
     <span>home</span>
+
     <span>from</span>
+
     <span>your</span>
+
     <span>fav</span>
-    <span>museum</span> 
+
+    <span>museum</span>
+
 </h1>*@
 
 <div class="slide-pictures-container">
@@ -68,11 +72,15 @@
 
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+
                 <span class="sr-only">Previous</span>
+
             </a>
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
+
                 <span class="sr-only">Next</span>
+
             </a>
 
         </div>
@@ -91,14 +99,33 @@
 @*------------------------Finito Slides--------------------------------------
 *@
 
-<div class="productsDiv" style="text-align:Center">
-    <h2><span>O</span><span>u</span><span>r</span><span> &nbsp</span><span>P</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span><span> </span><span> </span></h2>
+<div class="container-fluid">
+    <div class="row d-flex justify-content-center text-center">
+        <div class="col-12 col-md-9">
+            <div class="productsDiv text-center">
+                <span class="fs-1">O</span>
+                <span class="fs-1">u</span>
+                <span class="fs-1">r</span>
+                <span class="fs-1">&nbsp</span>
+                <span class="fs-1">P</span>
+                <span class="fs-1">r</span>
+                <span class="fs-1">o</span>
+                <span class="fs-1">d</span>
+                <span class="fs-1">u</span>
+                <span class="fs-1">c</span>
+                <span class="fs-1">t</span>
+                <span class="fs-1">s</span>
+            </div>
+        </div>
+    </div>
 </div>
+
 
 <div class="container-fluid">
     <div id="spinner-loader" class="d-flex justify-content-center">
         <div class="spinner-border" role="status">
             <span style="width:100px;" class="sr-only"></span>
+
         </div>
     </div>
 
@@ -149,24 +176,25 @@
 
 
                         $("#productsDiv").append(
-                        `<div class="col-lg-4 p-3">
-                                    <a href='/User/Buy/${product.id}' class="url-box text-decoration-none" style="color:white">
-                                <figure class='newsCard news-Slide-up '>
-                                    <img class="object-fit-cover" src="${product.pictureUrl}" />
-                                    <div class='newsCaption px-4'>
-                                        <div class="d-flex align-items-center justify-content-between cnt-title">
-                                            <h5 class='newsCaption-title text-white m-0'>${product.name}</h5>
-                                            <i class="fas fa-arrow-alt-circle-right "></i>
-                                        </div>
-                                        <div class='newsCaption-content d-flex'>
-                                            <p class="col-10 py-3 px-0"> ${formatter.format(product.price)} </br></br>
-                              </a>                              <button class="likeButton" style="border:none; background-color:transparent;"><i class="fas fa-heart"></i></button>
-                                        </div>
-                                    </div>
-                                    <span class="overlay"></span>
-                                </figure>
-                            
-                        </div>`);
+                            `<div class="col-lg-4 p-3">
+                                                    <a href='/User/Buy/${product.id}' class="url-box text-decoration-none" style="color:white">
+                                                <figure class='newsCard news-Slide-up '>
+                                                    <img class="object-fit-cover" src="${product.pictureUrl}" />
+                                                    <div class='newsCaption px-4'>
+                                                        <div class="d-flex align-items-center justify-content-between cnt-title">
+                                                            <h5 class='newsCaption-title text-white m-0'>${product.name}</h5>
+                                                            <i class="fas fa-arrow-alt-circle-right "></i>
+                                                        </div>
+                                                        <div class='newsCaption-content d-flex'>
+                                                            <p class="col-10 py-3 px-0"> ${formatter.format(product.price)} </br></br>
+                                              </a>                              <button class="likeButton" style="border:none; background-color:transparent;"><i class="fas fa-heart"></i></button>
+                                                        </div>
+                                                    </div>
+                                                    <span class="overlay"></span>
+
+                                                </figure>
+
+                                        </div>`);
                     });
                 }
 
