--- a/ShopMuseoProgettoFinale/wwwroot/css/Index.css
+++ b/ShopMuseoProgettoFinale/wwwroot/css/Index.css
@@ -1,4 +1,6 @@
-﻿body {
+﻿@import url(https://fonts.googleapis.com/css?family=Signika:700,300,600);
+
+body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -450,17 +452,14 @@ figure img {
 
 
 /*--------------------------------TEXT PRODUCTS products div--------------------------------------------------*/
-@import url(https://fonts.googleapis.com/css?family=Signika:700,300,600);
-.productsDiv > h2 {
-    font-size: 34px;
-    font: bold 4.5vw/1.6 'Signika', sans-serif;
+.productsDiv > span {
+    /*font-size: 34px;
+    font: bold 4.5vw/1.6 'Signika', sans-serif;*/
     user-select: none;
-    color: #F6d85b;
-}
-
-.productsDiv > h2 span {
+    color: rgba(40,26,54,1);
     display: inline-block;
     animation: float .2s ease-in-out infinite;
+    height: auto;
 }
 
 @keyframes float {
@@ -477,12 +476,12 @@ figure img {
     }
 }
 
-.productsDiv:hover > h2 span {
+.productsDiv:hover > span {
     animation: bounce .6s;
 }
 
 @keyframes bounce {
-    0%,100% {
+    0%, 100% {
         transform: translate(0);
     }
 
@@ -495,75 +494,55 @@ figure img {
     }
 }
 
-.productsDiv > span:nth-child(4n) {
-    color: hsl(50, 75%, 55%);
-    text-shadow: 1px 1px hsl(50, 75%, 45%), 2px 2px hsl(50, 45%, 45%), 3px 3px hsl(50, 45%, 45%), 4px 4px hsl(50, 75%, 45%);
-}
-
-.productsDiv > span:nth-child(4n-1) {
-    color: hsl(135, 35%, 55%);
-    text-shadow: 1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%), 3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%);
-}
-
-.productsDiv > span:nth-child(4n-2) {
-    color: hsl(155, 35%, 60%);
-    text-shadow: 1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%);
-}
-
-.productsDiv> span:nth-child(4n-3) {
-    color: hsl(30, 65%, 60%);
-    text-shadow: 1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%);
-}
-
-.productsDiv > h2 span:nth-child(2) {
+.productsDiv > span:nth-child(2) {
     animation-delay: .05s;
 }
 
-.productsDiv > h2 span:nth-child(3) {
+.productsDiv > span:nth-child(3) {
     animation-delay: .1s;
 }
 
-.productsDiv > h2 span:nth-child(4) {
+.productsDiv > span:nth-child(4) {
     animation-delay: .15s;
 }
 
-.productsDiv > h2 span:nth-child(5) {
+.productsDiv > span:nth-child(5) {
     animation-delay: .2s;
 }
 
-.productsDiv > h2 span:nth-child(6) {
+.productsDiv > span:nth-child(6) {
     animation-delay: .25s;
 }
 
-.productsDiv > h2 span:nth-child(7) {
+.productsDiv > span:nth-child(7) {
     animation-delay: .3s;
 }
 
-.productsDiv > h2 span:nth-child(8) {
+.productsDiv > span:nth-child(8) {
     animation-delay: .35s;
 }
 
-.productsDiv > h2 span:nth-child(9) {
+.productsDiv > span:nth-child(9) {
     animation-delay: .4s;
 }
 
-.productsDiv > h2 span:nth-child(10) {
+.productsDiv > span:nth-child(10) {
     animation-delay: .45s;
 }
 
-.productsDiv > h2 span:nth-child(11) {
+.productsDiv > span:nth-child(11) {
     animation-delay: .5s;
 }
 
-.productsDiv > h2 span:nth-child(12) {
+.productsDiv > span:nth-child(12) {
     animation-delay: .55s;
 }
 
-.productsDiv > h2 span:nth-child(13) {
+.productsDiv > span:nth-child(13) {
     animation-delay: .6s;
 }
 
-.productsDiv > h2 span:nth-child(14) {
+.productsDiv > span:nth-child(14) {
     animation-delay: .65s;
 }
 
