Aggiustata la barra di ricerca e navbar di Bootstrap

--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -6,17 +6,6 @@
     <link rel="stylesheet" href="~/css/Index.css" />
 }
 
-@section SearchBar {
-    @*  searchInput  *@
-    <div class="box">
-        <form name="search">
-            <input type="text" class="input" name="txt" onmouseout="this.value = ''; this.blur();">
-        </form>
-        <i class="fas fa-search"></i>
-
-    </div>
-}
-
 
 <div class="header-main-bar">
     <div class="logo-search-container">
@@ -128,7 +117,13 @@
 
         </div>
     </div>
-
+    <div class="row d-flex justify-content-center">
+        <div class="col-12 col-md-6">
+            <form class="d-flex" role="search">
+                <input id="searchBox" type="search" class="form-control me-2" placeholder="Cerca un prodotto" aria-label="Cerca" />
+            </form>
+        </div>
+    </div>
     <div class="row d-flex justify-content-center">
         <div class="col-12 col-lg-9 col-md-10 d-flex justify-content-center">
             <div id="productsDiv" class="row"></div>
@@ -177,24 +172,24 @@
 
                         $("#productsDiv").append(
                             `<div class="col-lg-4 p-3">
-                                                    <a href='/User/Buy/${product.id}' class="url-box text-decoration-none" style="color:white">
-                                                <figure class='newsCard news-Slide-up '>
-                                                    <img class="object-fit-cover" src="${product.pictureUrl}" />
-                                                    <div class='newsCaption px-4'>
-                                                        <div class="d-flex align-items-center justify-content-between cnt-title">
-                                                            <h5 class='newsCaption-title text-white m-0'>${product.name}</h5>
-                                                            <i class="fas fa-arrow-alt-circle-right "></i>
-                                                        </div>
-                                                        <div class='newsCaption-content d-flex'>
-                                                            <p class="col-10 py-3 px-0"> ${formatter.format(product.price)} </br></br>
-                                              </a>                              <button class="likeButton" style="border:none; background-color:transparent;"><i class="fas fa-heart"></i></button>
-                                                        </div>
-                                                    </div>
-                                                    <span class="overlay"></span>
+                                                                                    <a href='/User/Buy/${product.id}' class="url-box text-decoration-none" style="color:white">
+                                                                                <figure class='newsCard news-Slide-up '>
+                                                                                    <img class="object-fit-cover" src="${product.pictureUrl}" />
+                                                                                    <div class='newsCaption px-4'>
+                                                                                        <div class="d-flex align-items-center justify-content-between cnt-title">
+                                                                                            <h5 class='newsCaption-title text-white m-0'>${product.name}</h5>
+                                                                                            <i class="fas fa-arrow-alt-circle-right "></i>
+                                                                                        </div>
+                                                                                        <div class='newsCaption-content d-flex'>
+                                                                                            <p class="col-10 py-3 px-0"> ${formatter.format(product.price)} </br></br>
+                                                                              </a>                              <button class="likeButton" style="border:none; background-color:transparent;"><i class="fas fa-heart"></i></button>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                    <span class="overlay"></span>
 
-                                                </figure>
+                                                                                </figure>
 
-                                        </div>`);
+                                                                        </div>`);
                     });
                 }
 
