--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -20,32 +20,29 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg px-3">
-            <a class="navbar-brand" asp-controller="User" asp-action="Index">
-                
-            </a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="User" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="User" asp-action="Products">Negozio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="Admin" asp-action="Index">Amministrazione</a>
-                    </li>
-                    <partial name="_LoginPartial" />
-                </ul>
-
-
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-controller="User" asp-action="Index">
+                    Your Museum Shop!
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="User" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="User" asp-action="Products">Negozio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Admin" asp-action="Index">Amministrazione</a>
+                        </li>
+                        <partial name="_LoginPartial" />
+                    </ul>
+                    @RenderSection("SearchBar", required: false)
+                </div>
             </div>
-            @RenderSection("SearchBar", required: false)
-
         </nav>
     </header>
 
