inserimento descrizione e  link social nel footer

--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -66,11 +66,12 @@
                         <ul class="social-icons">
                             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
                             <li>
-                                <a href="https://www.facebook.com/tuo-museo"><i class="fab fa-facebook-f"></i>
+                                <a href="https://www.facebook.com/profile.php?id=100090037185054">
+                                    <i class="fab fa-facebook-f"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.twitter.com/tuo-museo"><i class="fab fa-twitter"></i></a>
+                                <a href="https://twitter.com/NegozioMuseo"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/tuo-museo"><i class="fab fa-instagram"></i></a>
